# flowpass

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  routes.py
app/data/: reason_templates.json  venue.json
app/engine/: __init__.py  congestion.py  recommender.py
app/models/: __init__.py  enums.py  recommendation.py  venue.py
app/services/: gemini.py  reason_templates_loader.py  venue_loader.py  weather.py
app/static/: app.css
app/templates/: index.html
app/templates/partials/: recommendation.html
scripts/: generate_reason_templates.py
tests/: conftest.py
tests/integration/: test_app.py  test_routes.py
tests/unit/: test_engine.py  test_engine_weather.py  test_gemini.py  test_weather.py
